# PHDS_fingertips_py

./: .gitignore  api_calls.py  make.bat  metadata.py  pyproject.toml  readme.md  readthedocs.yml  requirements.txt  retrieve_data.py  setup.py
.github/workflows/: pypi.yml  python-package.yml
docs/source/: api_calls.rst  area_data.rst  conf.py  index.rst  metadata.rst  modules.rst  requirements.txt  retrieve_data.rst
fingertips_py/: CHANGELOG.md  __init__.py  api_calls.py  area_data.py  metadata.py  readme.md  requirements.txt  retrieve_data.py
fingertips_py/src/: __init__.py  metadata.py  retrieve_data.py
fingertips_py/unit_tests/: tests.py
source/: conf.py  contents.rst  index.rst  index.rst.bak
src/fingertips_py/: __init__.py  api_calls.py  area_data.py  metadata.py  retrieve_data.py
tests/: test_all.py
